# certbot

./: --  .codecov.yml  .codespellrc  .coverage.hyperion.12084.154728  .coveragerc  .dockerignore  .editorconfig  .envrc  .gitattributes  .gitignore  .gitmodules  .isort.cfg  .npmignore  .pep8  .pylintrc  .travis.yml  =64  =8.6.1  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CHANGES.rst  CODE-OF-CONDUCT.md  CODE_OF_CONDUCT.md  CONTRIBUTING  CONTRIBUTING.md  CONTRIBUTING.rst  CheckSTARTTLS.py  Config.py  ConfigParser.py  DISCLAIMER  Dockerfile  Dockerfile-dev  Dockerfile-dns-azure  Dockerfile-old  Dockerfile-prod  Documentation.md  EULA  Home.md  How-to-Contribute.md  (+85 more)
acme/: .pep8  .pylintrc  .readthedocs.yaml  MANIFEST.in  README.rst  challenges.py  challenges_test.py  client.py  client_test.py  errors.py  fields.py  fields_test.py  jws_test.py  messages.py  messages2.py  messages2_test.py  messages_test.py  other.py  other_test.py  pyproject.toml  pytest.ini  readthedocs.org.requirements.txt  setup.py  test_util.py  verify.py  verify_test.py
acme/acme/: __init__.py  challenges.py  challenges_test.py  client.py  client_test.py  crypto_util.py  crypto_util_test.py  dns_resolver.py  dns_resolver_test.py  errors.py  errors_test.py  fields.py  fields_test.py  interfaces.py  jose_test.py  jws.py  jws_test.py  magic_typing.py  magic_typing_test.py  messages.py  messages_test.py  mixins.py  mureq.py  other.py  other_test.py  standalone.py  standalone_test.py  str_utils.py  str_utils_test.py  test_util.py  util.py  util_test.py
acme/docs/: Makefile  api.rst  conf.py  index.rst  jws-help.txt  make.bat
acme/examples/: dns01_example.py  example_client.py  http01_example.py  tlssni01-example.py
acme/jose/: __init__.py  b64_test.py  errors.py  errors_test.py  interfaces.py  interfaces_test.py  json_util.py  json_util_test.py  jwa.py  jwa_test.py  jwk.py  jwk_test.py  jws.py  jws_test.py  util.py  util_test.py
acme/schemata/: authorization.json  authorizationRequest.json  certificateRequest.json  challenge.json  challengeobject.json  responseobject.json  revocationRequest.json
acme/testdata/: README
acme/tests/: challenges_test.py  client_test.py  crypto_util_test.py  errors_test.py  fields_test.py  jose_test.py  jws_test.py  magic_typing_test.py  messages_test.py  standalone_test.py  test_util.py  util_test.py
certbot/: .readthedocs.yaml  CHANGELOG.md  MANIFEST.in  README.rst  __init__.py  __main__.py  account.py  achallenges.py  assert_is_none.semgrep  auth_handler.py  cert_manager.py  certbot_client.py  cli.py  client.py  colored_logging.py  compat.py  compatibility.py  configuration.py  constants.py  crypto_util.py  deactivate.py  eff.py  error_handler.py  errors.py  filelock.py  hooks.py  interfaces.py  le_util.py  local-oldest-requirements.txt  lock.py  log.py  main.py  notify.py  ocsp.py  pyproject.toml  readthedocs.org.requirements.txt  renewal.py  reporter.py  reverter.py  setup.cfg  (+5 more)
certbot-ci/: .gitignore  MANIFEST.in  launch-integration-tests.py  local-oldest-requirements.txt  pyproject.toml  setup.py
certbot-ci/certbot_integration_tests/: .coveragerc  __init__.py  certbot_test.py  conftest.py  nginx_test.py  test_acme_ca.py
certbot-ci/snap_integration_tests/: conftest.py
certbot-ci/windows_installer_integration_tests/: conftest.py  test_main.py
certbot-compatibility-test/: Dockerfile  Dockerfile-apache  Dockerfile-nginx  MANIFEST.in  README.rst  pyproject.toml  readthedocs.org.requirements.txt  setup.py
certbot-compatibility-test/certbot_compatibility_test/: __init__.py  errors.py  interfaces.py  test_driver.py  util.py  validator.py  validator_test.py
certbot-compatibility-test/docs/: Makefile  conf.py  index.rst  make.bat
certbot-compatibility-test/nginx/: README  roundtrip.py
certbot-dns-cloudflare/: .readthedocs.yaml  Dockerfile  MANIFEST.in  README.rst  local-oldest-requirements.txt  plugin_dependencies.txt  pyproject.toml  readthedocs.org.requirements.txt  setup.py
certbot-dns-cloudflare/certbot_dns_cloudflare/: __init__.py  dns_cloudflare.py  dns_cloudflare_test.py
certbot-dns-cloudflare/docs/: .readthedocs.yaml  Makefile  conf.py  index.rst  make.bat
certbot-dns-cloudflare/hooks/: build
certbot-dns-cloudflare/snap/: snapcraft.yaml
certbot-dns-cloudflare/tests/: dns_cloudflare_test.py
certbot-dns-rfc2136/: .readthedocs.yaml  Dockerfile  MANIFEST.in  README.rst  local-oldest-requirements.txt  plugin_dependencies.txt  pyproject.toml  readthedocs.org.requirements.txt  setup.py
certbot-dns-rfc2136/certbot_dns_rfc2136/: __init__.py  dns_rfc2136.py  dns_rfc2136_test.py
certbot-dns-rfc2136/docs/: Makefile  conf.py  index.rst  make.bat
certbot-dns-rfc2136/snap/: snapcraft.yaml
certbot-dns-rfc2136/tests/: dns_rfc2136_test.py
certbot-dns-route53/: .readthedocs.yaml  Dockerfile  MANIFEST.in  README.md  README.rst  local-oldest-requirements.txt  plugin_dependencies.txt  pyproject.toml  readthedocs.org.requirements.txt  setup.py
certbot-dns-route53/certbot_dns_route53/: __init__.py  authenticator.py  dns_route53.py  dns_route53_test.py
certbot-dns-route53/docs/: Makefile  conf.py  index.rst  make.bat
certbot-dns-route53/examples/: sample-aws-delegated-policy.json  sample-aws-policy.json
certbot-dns-route53/snap/: snapcraft.yaml
certbot-dns-route53/tests/: dns_route53_test.py
certbot-dns-route53/tools/: tester.pkoch-macos_sierra.sh
certbot-nginx/: Dockerfile  MANIFEST.in  README.rst  local-oldest-requirements.txt  pyproject.toml  readthedocs.org.requirements.txt  setup.py
certbot-nginx/certbot_nginx/: .#parser.py  __init__.py  better_parser.py  challenges.py  configurator.py  constants.py  display_ops.py  http_01.py  nginx_parser_obj.py  nginxparser.py  obj.py  options-ssl-nginx-old.conf  options-ssl-nginx.conf  parser.py  parser_obj.py  tls_sni_01.py
certbot-nginx/docs/: Makefile  conf.py  index.rst  make.bat
certbot-nginx/tests/: boulder-integration.conf.sh  boulder-integration.sh  configurator_test.py  display_ops_test.py  http_01_test.py  nginxparser_test.py  obj_test.py  (+4 more)
letstest/: README.md  pyproject.toml  setup.py
(+4591 files in other folders)
