[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "acme"
dynamic = ["version"]
description = "ACME protocol implementation in Python"
readme = "README.rst"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Certbot Project", email = "certbot-dev@eff.org" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
]
dependencies = [
    "cryptography>=43.0.0",
    "josepy>=2.0.0",
    # PyOpenSSL>=25.0.0 is just needed to satisfy mypy right now so this dependency can probably be
    # relaxed to >=24.0.0 if needed.
    "PyOpenSSL>=25.0.0",
    "pyrfc3339",
    "requests>=2.20.0",
]

[project.optional-dependencies]
docs = [
    "Sphinx>=1.0", # autodoc_member_order = 'bysource', autodoc_default_flags
    "sphinx_rtd_theme",
]
test = [
    "pytest",
    "pytest-xdist",
    "typing-extensions",
]

[project.urls]
Homepage = "https://github.com/certbot/certbot"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
