[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "certbot"
dynamic = ["version", "dependencies", "optional-dependencies"]
description = "ACME client"
readme = "README.rst"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Certbot Project" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

[project.scripts]
certbot = "certbot.main:main"

[project.entry-points."certbot.plugins"]
manual = "certbot._internal.plugins.manual:Authenticator"
null = "certbot._internal.plugins.null:Installer"
standalone = "certbot._internal.plugins.standalone:Authenticator"
webroot = "certbot._internal.plugins.webroot:Authenticator"

[project.urls]
Homepage = "https://github.com/certbot/certbot"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
exclude = ['docs', 'examples', 'tests', 'venv']  # exclude packages matching these glob patterns

[tool.setuptools.dynamic]
version = {attr = "certbot.__version__"}  # any module attribute compatible with ast.literal_eval
